# ranim-bench

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  GEMINI.md  flake.nix  justfile
.github/workflows/: deploy.yml
benches/: foo.rs
db/: db.json
db/03b94c0779d80dbb5101bf734365767b373c66ea/aorus/: run.json
db/1c489365d71d52fe7c237e2abf542dd6f1d51c0f/aorus/: run.json
db/1c489365d71d52fe7c237e2abf542dd6f1d51c0f/lab/: run.json
db/1c489365d71d52fe7c237e2abf542dd6f1d51c0f/macbookpro/: run.json
db/232c488327e9e8036e0350162155ae3050ba7ba5/aorus/: run.json
db/232c488327e9e8036e0350162155ae3050ba7ba5/lab/: run.json
db/232c488327e9e8036e0350162155ae3050ba7ba5/macbookpro/: run.json
db/332979972d40005ba5da9440f227732fefc70bd7/aorus/: run.json
db/332979972d40005ba5da9440f227732fefc70bd7/lab/: run.json
db/332979972d40005ba5da9440f227732fefc70bd7/macbookpro/: run.json
db/37094df2200759b97cb69f5b8fe3431d8f4bb7f7/aorus/: run.json
db/37094df2200759b97cb69f5b8fe3431d8f4bb7f7/lab/: run.json
db/37094df2200759b97cb69f5b8fe3431d8f4bb7f7/macbookpro/: run.json
db/3a620a03ddcf8508239b38cc713aba9230af7579/aorus/: run.json
db/3a620a03ddcf8508239b38cc713aba9230af7579/lab/: run.json
db/3a620a03ddcf8508239b38cc713aba9230af7579/macbookpro/: run.json
db/3e0298798167beb42d68fb00d2d86516687fae02/aorus/: run.json  system_info.json
src/: common.rs  main.rs  utils.rs
src/commands/: bench.rs  bench_missing.rs  graph.rs  sync.rs
web/: index.html  package.json  vite.config.ts
web/public/: .gitignore
web/src/: App.tsx  constants.ts  index.css  types.ts
(+1727 files in other folders)
