[package]
name = "ranim-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "foo"
harness = false
