[package]
name = "ranim-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = { version = "0.8.0", features = ["html_reports"] }
wgpu = { version = "27.0.1", features = ["serde"] }
pollster = "0.4.0"
git-graph = "0.7.0"
svg = "0.18.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2"] }
tracing-indicatif = "0.3.14"
indicatif = "0.18.4"
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
